@@ -4,6 +4,7 @@ Revision history for App-EUMM-Upgrade
         - Option to skip searching for github parent repository
         - Use meta-spec 2 in case of github and bitbucket
         - When loading file from VERSION_FROM, also check if pod file is available
+        - Detect WriteMakefile(%hash) and add new fields to %hash instead.
         - Other small changes
 
 0.24    2015-04-12
